# dynamixel-api

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
dynamixel_api/: __init__.py  dynamixel_connector.py  motor_control.py  util.py
example/: rhp12rn_open_close.py  xl430w250t_open_close.py
src/dynamixel_gripper_control/: __init__.py  motor_control.py  rhp12rn_control.py  xl430w250t_control.py
src/dynamixel_gripper_control/model/: __init__.py  xl430w250t.py
src/example/: xl430w250t_open_close.py
