[project]
name = "dynamixel_api"
version = "0.0.1"
authors = [
  { name = "Tim Schneider", email = "schneider@ias.informatik.tu-darmstadt.de" },
  { name = "Erik Helmut", email = "erik.helmut1@gmail.com" },
]
description = "Python controller for grippers powered by DYNAMIXEL motors."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
]

[project.urls]
Homepage = "https://github.com/TimSchneider42/dynamixel-api"
Issues = "https://github.com/TimSchneider42/dynamixel-api/issues"

[tool.setuptools]
packages = { find = { where = ["src"] } }

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
